fix: change text visibility to hidden

--- a/style.css
+++ b/style.css
@@ -792,6 +792,10 @@ h4 {
     color: #F3976C!important;
 }
 
+.txt-hidden {
+    visibility: hidden;
+}
+
 .btn-atomic-tangerine {
     background: #F3976C;
     color: #FFFFFF!important;
